IVYPORTAL-10245 Portal User Example Guide - Fix bug UI on Firefox

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -4644,3 +4644,6 @@ height: 25rem;
 position:absolute;
 top:4.5rem;	
 }
+.case-map-stage hr{
+clear: both;
+}
